--- a/retrobisztro.css
+++ b/retrobisztro.css
@@ -1,3 +1,12 @@
 body {
     background-color: darkslategray;
 }
+
+.box_shadow {
+ border: 5px solid rgb(235, 230, 215); 
+ background-color: rgb(77, 63, 19);
+ padding: 5px;
+ border-radius: 22px;
+ margin-top: 10px;
+ width: 1200px;
+}
